force-app/main/default/objects/Earnings_and_Leave_Statements__c/Earnings_and_Leave_Statements__c.object-meta.xml
<CustomObject>
    <label>Earnings and Leave Statement</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Statement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earnings and Leave Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>