force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Earnings and Leave Statements</relationshipLabel>
    <relationshipName>Earnings_and_Leave_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>