force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Gross_Pay__c.field-meta.xml
<CustomField>
    <fullName>Gross_Pay__c</fullName>
    <description>Auto-calculated from Gross_Pay_Per_Pay_Period__c field on the employee contact record</description>
    <formula>Employee__r.Gross_Pay_per_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated from Gross_Pay_Per_Pay_Period__c field on the employee contact record</inlineHelpText>
    <label>Gross Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>