force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay__c</fullName>
    <formula>Gross_Pay__c - Total_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>