force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <label>Pay Period</label>
    <length>2</length>
    <type>Text</type>
</CustomField>