force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Post_Tax_Deductions_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Post_Tax_Deductions_Percentage__c</fullName>
    <defaultValue>0.03</defaultValue>
    <description>Used to set the dollar amount of post-tax deductions (default 3%)</description>
    <inlineHelpText>Used to set the dollar amount of post-tax deductions (default 3%)</inlineHelpText>
    <label>Post-Tax Deductions Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>