force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/PP__c.field-meta.xml
<CustomField>
    <fullName>PP__c</fullName>
    <description>Original: Fiscal_Year__c &amp; &apos;-&apos; &amp; Pay_Period__c</description>
    <formula>IF(NOT(ISNULL(Pay_Date__c)),TEXT(Year( Pay_Date__c )) &amp; &apos;-&apos; &amp; LPAD(TEXT(Month( Pay_Date__c )),2,&quot;0&quot;),&quot;&quot;)</formula>
    <label>PP</label>
    <type>Text</type>
</CustomField>