force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Pre_Tax_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Deductions__c</fullName>
    <formula>Pre_Tax_Deductions_Percentage__c * Gross_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Tax Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>