force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Pre_Tax_Deductions_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Deductions_Percentage__c</fullName>
    <defaultValue>0.09</defaultValue>
    <description>Used to set the dollar amount of pre-tax deductions (default 9%)</description>
    <inlineHelpText>Used to set the dollar amount of pre-tax deductions (default 9%)</inlineHelpText>
    <label>Pre-Tax Deductions Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>