force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Sick_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Balance__c</fullName>
    <label>Sick Leave Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>