force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <defaultValue>0.15</defaultValue>
    <description>Used to set the dollar amount of taxes (default 15%)</description>
    <inlineHelpText>Used to set the dollar amount of taxes (default 15%)</inlineHelpText>
    <label>Tax Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>