force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <formula>Tax_Percentage__c * Gross_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>