force-app/main/default/objects/Earnings_and_Leave_Statements__c/fields/Total_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductions__c</fullName>
    <formula>Pre_Tax_Deductions__c + Taxes__c + Post_Tax_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>